fixed: top covering list

--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ button {
   padding: 1em 3em;
 }
 .list {
-  padding: 30px 0 70px 0;
+  padding: calc(13vw + 10px) 0 70px 0;
   left: 20vw;
   height: calc(100vh - 300px);
   width: 50vw;
